Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -74,8 +74,7 @@
     opacity: 0;
 }
 
-.headers h1,
-.phone span {
+.headers h1 {
     font-size: 7rem;
     color: var(--orange);
     -webkit-text-fill-color: var(--orange);
@@ -123,6 +122,12 @@
 
 .phone {
     opacity: 0;
+}
+
+.phone span {
+    font-size: 7rem;
+    color: var(--orange);
+    -webkit-text-fill-color: var(--orange);
 }
 
 
